--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -5,11 +5,12 @@
 This report presents the EMEP activities in 2020 and 2021 in relation to transboundary
 fluxes of particulate matter, photo-oxidants, acidifying and
 eutrophying components, with focus on results
-for 2019. It presents major results of the activities related to
-emission inventories, observations and modelling. The report also
-introduces specific relevant research activities addressing EMEP key
-challenges, as well as technical developments of the observation and
-modelling capacities. This year special attention has been given to the trends in air pollution during the last decades, in support of the Gothenburg Protocol review.
+for 2019. It presents major results of the activities related to emission inventories, observations and modelling. 
+%The report also
+%introduces specific relevant research activities addressing %EMEP key
+%challenges, as well as technical developments of the %observation and
+%modelling capacities. 
+This year special attention has been given to the trends in air pollution during the last decades, in support of the Gothenburg Protocol review.
 
 \subsection*{Measurements and model results for 2019} %Wenche, Svetlana, Sverre, Hilde to write
 In the first chapter, the status of air pollution in 2019 is presented, combining 
@@ -22,17 +23,17 @@ precipitation. The ozone network consisted of 138 sites, particulate matter was 
 78 sites, of which 50 performed measurements of both \PM[10] and \PM[2.5]. 
 In addition, 56 sites from 21 Parties reported at least one of the components required in the advanced EMEP measurement program (level 2). However, very few sites provided a complete level 2 program, i.e. only 12 sites have implemented all the required aerosol parameters. 
 
-The mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019 and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
+In 2019, the mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019 and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
 
 %Svetlana & Wenche update: Updated 31.8.2021
 Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions with a mild winter and excessive precipitation in the cold seasons (especially autumn) in many parts of Europe. %In addition, the spring/summer period was (with some exceptions) relatively warm which favoured evaporation of semi-volatile inorganic and organic aerosols.
-The results from the EMEP MSC-W model simulations and the observations show general increase of the annual mean levels of \PM[10] and \PM[2.5] over land from north to south. The regional background concentrations are below 2-5 \ug in Northern Europe, increasing to 5-15 \ug in the mid-latitudes and further south. The annual mean \PM[10] are in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain, or otherwise between 10 and 15 \ug in parts of Benelux, Poland, Hungary and some of Balkan countries. Furthermore, the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug due to windblown dust from the arid soils and deserts. There is a good general agreement between the modelled and observed distributions of annual mean \PM[10] and \PM[2.5], with correlation coefficients of 0.60 and 0.72, respectively. Overall, the model underestimates the observed annual mean of \PM[10] by 12\% and \PM[2.5] by 13\% .
+The results from the EMEP MSC-W model simulations and the observations show general increase of the annual mean levels of \PM[10] and \PM[2.5] over land from north to south. The regional background concentrations are below 2-5 \ug in Northern Europe, increasing to 5-15 \ug in the mid-latitudes and further south. The annual mean \PM[10] are in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain, and between 10 and 15 \ug in parts of Benelux, Poland, Hungary and some of Balkan countries. Furthermore, the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug due to windblown dust from the arid soils and deserts. There is a good general agreement between the modelled and observed distributions of annual mean \PM[10] and \PM[2.5], with annual spatial correlation coefficients of 0.60 and 0.72, respectively. Overall, the model underestimates the observed annual mean of \PM[10] by 12\% and \PM[2.5] by 13\% .
 
-Much rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites.
+A lot of rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational sites show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites.
 %, with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug. 
 Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s %(with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). 
 Regional background \PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51 stations in 2019. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  %The highest number of exceedance days was 40 at HU0002 and IT0004, followed by 30, 26 and 24 at DE0044, PL0005 and AT0002, respectively. 
-Most of the exceedances registered at the central European sites occurred during the winter and in the spring, while rather few exceedances occurred in the wet autumn of 2019. By contrast, at the Mediterranean sites the exceedances were more frequent during summer. PM exceedances simulated by the EMEP MSC-W model correspond in general quite well with the EMEP observations, with some model’s tendency of underestimating the occurrence of exceedances for Central European sites, while overestimating those for some of the Mediterranean sites heavily influenced by desert dust.
+Most of the exceedances registered at the central European sites occurred during the winter and in the spring, while rather few exceedances occurred in the wet autumn of 2019. By contrast, at the Mediterranean sites the exceedances were more frequent during summer. PM exceedances simulated by the EMEP MSC-W model correspond in general quite well with the EMEP observations, with some tendency of underestimating the occurrence of exceedances for Central European sites, while overestimating those for some of the Mediterranean sites heavily influenced by desert dust.
 
 
 
@@ -71,7 +72,7 @@ Most of the exceedances registered at the central European sites occurred during
 In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS while 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
 
 After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
-
+\hspace{3mm}
 Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
 Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear.
 
@@ -81,9 +82,10 @@ The treatment of condensable organics in emission factors is best known for the 
 %In March 2020, MSC-W hosted an expert workshop on condensables, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and
 %possible approaches for dealing with this important class of compounds.
 %Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used.
-To improve the quality of the input data for air quality models, and following a decision of the EMEP Bureaux, the group of experts at the expert workshop on condensable organics hosted by MSC-W in 2020 agreed on the following approach: 1) in year one (2020) use the so-called REF2 emission data provided by TNO, which include condensable organics, as an initial estimate for residential combustion emissions and 2) in subsequent years these top-down estimates should be increasingly replaced by national estimates once procedures for quantifying condensable organics in a more harmonized way are agreed on and implemented. 
+To improve the quality of the input data for air quality models, and following a decision of the EMEP Bureaux, the group of experts at the expert workshop on condensable organics hosted by MSC-W in 2020 agreed on the following approach: 1) in year one (2020) use the so-called REF2 emission data provided by TNO, which include condensable organics, as an initial estimate for residential combustion emissions and 2) in subsequent years these top-down estimates should be increasingly replaced by national estimates. 
+%once procedures for quantifying condensable organics in a more harmonized way are agreed on and implemented. 
 
-In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C. For these Parties the reported PM emissions were used, while for other Parties the TNO REF2.1 data were used for GNFR sector C. The resulting GNFR C data set were combined with official EMEP emissions into the so-called EMEPwREF2.1C emission dataset. This emission data set has been used in the assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year. 
+Therefore, in 2021, CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C (small-scale combustion). For these Parties the reported PM emissions were used, while for other Parties the TNO REF2.1 data were used for GNFR sector C. The resulting GNFR C data set were combined with official EMEP emissions into the so-called EMEPwREF2.1C emission dataset. This emission data set has been used in the assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year. 
 
 %The assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year have been conducted with the EMEPwREF2.1C emission dataset.
 %official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). 
@@ -113,7 +115,7 @@ are smaller than in model calculations (42\%
 %, -2.2\% yr$^{-1}$ 
 for NO$_2$ and 40\% 
 %(-2.3\% yr$^{-1}$) 
-for wet deposition of oxidized nitrogen). The reductions in observations
+for wet deposition of oxidized nitrogen). Similar results are found for other oxidized nitrogen components, although the difference between model results and observations are smaller (e.g. observed \noiii is reduced by 38\% and in modelled by 47\%). The reductions in observations
 %found for observations of oxidized nitrogen compunds 
 are also significantly smaller than the changes in reported emissions of \noii (-48\% for EU27+UK+EFTA countries) for 2000--2019.
 
@@ -131,7 +133,7 @@ for 2000-2019. The reduction for ammonium aerosols is even larger, around 49\%,
 %-2.6 \% yr$^{-1}$,  
 both in observations and model calculations. Very few sites have long term time series of ammonia in air (8 sites), and for very few of those sites the changes are statistically significant. However, on average, the changes observed and calculated are positive. 
 
-These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulfur and oxidized nitrogen components. It can be noted that the results imply that the contribution of ammonia emission to aerosols has been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
+These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulfur and oxidized nitrogen components. It can be noted that the results imply that the contribution of ammonia emissions to aerosols has been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
 
 
 
@@ -144,13 +146,16 @@ The model reproduced observed EC values and trends quite well, but underpredicte
 Organic aerosol comprises a major fraction of \pmfine, but major efforts are needed to separate and understand its natural and anthropogenic components, in order to get a quantitative overview of the abatable fractions.
 %
 \subsubsection*{\PM[10] and \PM[2.5]}
-For \PM[10] and \PM[2.5] statistically significant downward trends are identified for the majority of the sites for the period 2000-2019 (37 sites for \PM[10] and 19 for \PM[2.5]). 
+For \PM[10] and \PM[2.5] statistically significant downward trends are identified for the majority of the sites for the period 2000-2019.
+%(37 sites for \PM[10] and 19 for \PM[2.5]). 
 %located mostly in the western part of the EMEP domain. 
-During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (and 37 \% in model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] was 46 \%  (48 \% estimated by the model). The smaller reductions in \PM[10] than in \PM[2.5] can be explained by the larger contribution of natural aerosols (i.e. sea salt and windblown dust) in the coarse fraction of the former. 
+During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (37 \% in model simulations) on average. 
+%at the considered sites. 
+The average observed decrease of \PM[2.5] was 46 \%  (48 \% estimated by the model). The smaller reductions in \PM[10] than in \PM[2.5] can be explained by the larger contribution of natural aerosols (i.e. sea salt and windblown dust) in the coarse fraction of the former. 
 
 PM is a complex pollutant, consisting of aerosol species both emitted directly and formed from gaseous precursors. 
 %Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions contributed to reduce PM concentrations. During the 2000-2019 period, \soiv, \noii and \nhiv decreased on average by 3.2, 2.0 and 2.6 \% $yr^{-1}$ derived from the long term EMEP observations and by 3.8, 2.5 and 2.6 \% $yr^{-1}$ from the model simulations, thus contributing substantially to the \PM[10] and \PM[2.5] decreases. Substantial decreases of EC and wintertime OC (by around 4.5~\%/yr) was observed from 2010 to 2019, whilst the trends in summertime OC were much less clear (unfortunately consistent observational data for carbonaceous aerosols is not available for the 2000s).  
-Reduction in the secondary inorganic aerosols (\soiv, \noiii and \nhiv) components contributed substantially to the \PM[10] and \PM[2.5] decreases in 2000-2019. The contribution from EC and OC is more difficult to quantify due to the lack of observation in the 2000s. However, as described above, considerable reductions in EC and wintertime OC have been found for the 2010--2019 period.  
+Reduction in the secondary inorganic aerosols (\soiv, \noiii and \nhiv) components contributed substantially to the \PM[10] and \PM[2.5] decreases in 2000-2019. The contribution from EC and OC is more difficult to quantify due to the lack of observation in the 2000s. However, as described in the previous subsection, considerable reductions in EC and wintertime OC have been found for the 2010--2019 period.  
 
 %For the 2010-2019 period, the analysis shows
 %considerable reductions in EC and wintertime OC ,  but not for summertime OC.
@@ -189,8 +194,8 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 \subsection*{Model improvements} %DS updated 23/7/2021
 
 The EMEP MSC-W model code has been upgraded in a number of ways. 
-A 19-sector emissions system (GNFR-CAMS) was introduced into the code. Emissions for soil NO, DMS, and aircraft were updated using results from the CAMS81 project. 
-The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and the chemical mechanism were adapted to explicitly track GNFR sector C emissions (residential). Revised global monthly emission factors were produced, and use of a global time-zone map introduced. The default Kz and Hmix schemes were changed. The local fraction methods were extended, and code for the many configuration options was simplified. 
+A 19-sector emissions system (GNFR-CAMS) was introduced into the code. Emissions for soil NO, DMS, and aircraft were updated using results from the CAMS\_81 project. 
+The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and the chemical mechanism were adapted to explicitly track GNFR sector C emissions. Revised global monthly emission factors were produced, and use of a global time-zone map introduced. The default Kz and Hmix schemes were changed. The local fraction methods were extended, and code for the many configuration options was simplified. 
 
 
 
